plugins {
    id 'java-library'
    id 'java-test-fixtures'
    id 'war'
    id 'checkstyle'
    id 'com.github.spotbugs' version '5.2.5'
}

repositories {
    mavenCentral()
}

dependencies {
    api 'com.google.code.findbugs:jsr305:3.0.2'
    api 'org.slf4j:slf4j-api:1.7.36'
    compileOnly 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'com.auth0:java-jwt:3.19.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
    implementation 'org.apache.tomcat:tomcat-catalina:9.0.7'

    // TODO: logger implementation
    implementation 'org.slf4j:slf4j-simple:1.7.36'

    testFixturesApi 'org.eclipse.jetty:jetty-webapp:11.0.11'
    testFixturesImplementation 'org.eclipse.jetty:jetty-security:11.0.11'
    testFixturesImplementation 'org.eclipse.jetty:jetty-util:11.0.11'
    testFixturesImplementation 'org.eclipse.jetty:jetty-server:11.0.11'

    testImplementation 'org.slf4j:slf4j-simple:1.7.36'

    testImplementation platform('org.junit:junit-bom:5.10.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

test {
    useJUnitPlatform()
}

checkstyle {
    if ('strict' == findProperty('checkMode')) {
        maxWarnings = 0
    }
}

spotbugsMain {
    reports {
        xml.enabled = true
        html.enabled = true
    }
}

spotbugsTest.enabled = false
checkstyleTest.enabled = false
spotbugsTestFixtures.enabled = false
checkstyleTestFixtures.enabled = false
